apps/development/financeiro-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financeiro-service
  namespace: development
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: financeiro
