apps/development/financeiro-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: financeiro-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: financeiro.kub3.dev
    http:
      paths:
      - backend:
          service:
            name: financeiro-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - financeiro.kub3.dev
    secretName: le-kub3-dev-cert-tls
